--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
